# SdL-Rust

./: .gitignore  Cargo.toml  tarpaulin-report.html
entregables/entregable1_v1/: Cargo.toml
entregables/entregable1_v2/: Cargo.toml
entregables/entregable2_v1/: Cargo.toml
entregables/entregable2_v2/: Cargo.toml
prac1/: Cargo.toml
prac1/ej1/: Cargo.toml
prac1/ej1/src/: main.rs
prac1/ej2/: Cargo.toml
prac1/src/: main.rs
prac1/src/ej10/: main.rs
prac1/src/ej12/: main.rs
prac1/src/ej3/: main.rs
prac1/src/ej5/: main.rs
prac1/src/ej7/: main.rs
prac1/src/ej8/: main.rs
prac1_/ej10/: Cargo.toml
prac1_/ej11/: Cargo.toml
prac1_/ej12/: Cargo.toml
prac1_/ej3/: Cargo.toml
prac1_/ej4/: Cargo.toml
prac1_/ej5/: Cargo.toml
prac1_/ej6/: Cargo.toml
prac1_/ej7/: Cargo.toml
prac1_/ej8/: Cargo.toml
prac1_/ej9/: Cargo.toml
prac2/: Cargo.toml
prac3/: Cargo.toml
prac3/src/: main.rs
prac3/src/ej1/: main.rs
prac3/src/ej10/: main.rs
prac3/src/ej10/structs/: Biblioteca.rs  biblioteca.rs  cliente.rs  fecha.rs  libro.rs  prestamo.rs
prac3/src/ej2/: main.rs
prac3/src/ej3/: main.rs
prac3/src/ej4/: main.rs
prac3/src/ej5/: main.rs
prac3/src/ej6/: Fermin_Franco_v1.rs  Fermin_Franco_v2.rs  main.rs
prac3/src/ej7/: main.rs
prac3/src/ej8/: main.rs
prac3/src/ej9/: impls.rs  main.rs  structs.rs
prac4/: Cargo.toml
prac4/src/ej1/: main.rs
prac4/src/ej2/: main.rs
prac4/src/ej3/: main.rs
prac4/src/ej3/structs/: errores.rs  mod.rs  streamingrust.rs  suscripcion.rs  usuario.rs
prac4/src/ej4/: main.rs
prac4/src/ej4/structs/: comercio.rs  producto.rs  vendedor_cliente.rs  venta.rs
prac4/src/ej5/: main.rs
prac4/src/ej5/structs/: date.rs  mod.rs  monetary_structs.rs  user.rs  xyz.rs
prac5/_p5e1/: Cargo.toml
prac5/_p5e2/: Cargo.toml
prac5/_p5e3/: Cargo.toml  tarpaulin-report.html
src/: main.rs
(+124 files in other folders)
