[package]
name = "prac3"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "prac3ej1"
path = "src/ej1/main.rs"

[[bin]]
name = "prac3ej2"
path = "src/ej2/main.rs"

[[bin]]
name = "prac3ej3"
path = "src/ej3/main.rs"

[[bin]]
name = "prac3ej4"
path = "src/ej4/main.rs"

[[bin]]
name = "prac3ej5"
path = "src/ej5/main.rs"

[[bin]]
name = "prac3ej6"
path = "src/ej6/main.rs"

[[bin]]
name = "prac3ej7"
path = "src/ej7/main.rs"

[[bin]]
name = "prac3ej8"
path = "src/ej8/main.rs"

[[bin]]
name = "prac3ej9"
path = "src/ej9/main.rs"

[[bin]]
name = "prac3ej10"
path = "src/ej10/main.rs"

[dependencies]
rand = { version = "0.9.1", features = [] }
